--- a/breastCancer.ipynb
+++ b/breastCancer.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSCP5jjlWjKEu61/rHkJvj",
+      "authorship_tag": "ABX9TyOYaPih8vKsK1YbIYvmxtKm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1215,12 +1215,12 @@
       ],
       "metadata": {
         "collapsed": true,
-        "id": "3gz_VBWiOZKf",
-        "outputId": "6cccc9c2-04d3-4efa-afda-3519b4776925",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "3gz_VBWiOZKf",
+        "outputId": "6cccc9c2-04d3-4efa-afda-3519b4776925"
       },
       "execution_count": 325,
       "outputs": [
@@ -1522,12 +1522,12 @@
         "cancer_prepared_df.head(2)"
       ],
       "metadata": {
-        "id": "_SpC12iQ0E08",
-        "outputId": "133d75f6-74ec-45d0-ccb9-55e2c651abe8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 179
-        }
+        },
+        "id": "_SpC12iQ0E08",
+        "outputId": "133d75f6-74ec-45d0-ccb9-55e2c651abe8"
       },
       "execution_count": 341,
       "outputs": [
@@ -2046,12 +2046,12 @@
         "best_model.fit(train_set, cancer_labels)"
       ],
       "metadata": {
-        "id": "rw22dXN9BrAY",
-        "outputId": "b697ee23-cf66-4b04-e73f-697e686b0f51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 228
-        }
+        },
+        "id": "rw22dXN9BrAY",
+        "outputId": "b697ee23-cf66-4b04-e73f-697e686b0f51"
       },
       "execution_count": 343,
       "outputs": [
@@ -2181,12 +2181,12 @@
         "print(f\"ROC AUC Score: {roc_auc:.2f}\")\n"
       ],
       "metadata": {
-        "id": "f4_c7OWU-THc",
-        "outputId": "b189b425-fe64-4aec-918e-9526c06298a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 663
-        }
+        },
+        "id": "f4_c7OWU-THc",
+        "outputId": "b189b425-fe64-4aec-918e-9526c06298a9"
       },
       "execution_count": 346,
       "outputs": [
@@ -2224,6 +2224,82 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import joblib\n",
+        "joblib.dump(best_model, \"breastCancer.pkl\")"
+      ],
+      "metadata": {
+        "id": "HE9Nq-1dGmjV",
+        "outputId": "7f3659f2-04bd-46df-f7d6-064485854477",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 354,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['breastCancer.pkl']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 354
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import joblib\n",
+        "final_model_reloaded = joblib.load(\"breastCancer.pkl\")\n",
+        "new_data = cancer.iloc[:5]  # pretend these are new districts\n",
+        "predictions = final_model_reloaded.predict(new_data)"
+      ],
+      "metadata": {
+        "id": "4wkZDWL1G1U2"
+      },
+      "execution_count": 355,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions"
+      ],
+      "metadata": {
+        "id": "9zZMpfJEIcBB",
+        "outputId": "6c2e9953-9b86-4d75-caec-b4c5eb5e09fa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 356,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1, 0, 0, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 356
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VCjBx39SIg3c"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
